--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 *{
     box-sizing: border-box;
-    background-color: 	#FFFFF0;
     font-family: "#latin_modern_roman_demi10Rg","Palatino Linotype";
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
     padding: 0;
+    scroll-behavior:smooth ;
 }
 
 body{
@@ -24,8 +24,9 @@ body{
 }
 
 .menu{
-    padding-top: 100px;
+    padding-top: 50px;
     background-color: transparent;
+    position: sticky;
 }
 
 
@@ -34,6 +35,7 @@ body{
     justify-content: center;
     align-items: center;
     list-style-type: none;
+
 }
 
 .menu>ul>li{
@@ -62,6 +64,7 @@ body{
 
 .bottom>*{
     display:none;
+    font-size: 1.5em;
 }
 
 a{
@@ -81,14 +84,48 @@ a{
 #profile{
     border-radius:50px;
     box-shadow: 0px 0px 100px 10px gray;
+    width: 400px;
 }
 
 #logo{
-    width: 200px;
+    width: 400px;
+
     background-color: inherit;
+
 }
 
 h1{
     font-size: 4em;
     background-color: inherit;
+}
+
+form{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.3em;
+}
+
+.myform{
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 30px;
+}
+
+p{
+    padding-top: 20px;
+    width: 50vw;
+    text-align: justify;
+}
+
+#social_b{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+#social_b>a>img{
+    width: 100px;
 }
